@@ -5,7 +5,6 @@ PACKAGE_STRING	internal	autotools
 PACKAGE_TARNAME	internal	autotools
 PACKAGE_VERSION	internal	autotools
 PQXX_HAVE_ASSUME	public	compiler
-PQXX_HAVE_CHARCONV_INT	internal	compiler
 PQXX_HAVE_CHARCONV_FLOAT	internal	compiler
 PQXX_HAVE_CMP	public	compiler
 PQXX_HAVE_CONCEPTS	public	compiler
